[package]
name = "boa_examples"
version = "0.13.0"
authors = ["boa-dev"]
repository = "https://github.com/boa-dev/boa"
license = "Unlicense/MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Boa = { path = "../boa" }


[[bin]]
name = "loadstring"
path = "src/loadstring.rs"

[[bin]]
name = "loadfile"
path = "src/loadfile.rs"


[[bin]]
name = "enhancedglobal"
path = "src/enhancedglobal.rs"

[[bin]]
name = "modulehandler"
path = "src/modulehandler.rs"
